--- a/app-05-basic-conference/application.json
+++ b/app-05-basic-conference/application.json
@@ -3,5 +3,5 @@
   "applicationName": "Member Conference",
   "conferenceFromNumber": "+212332",
   "conferenceVoice": "Jorge",
-  "conferenceMembersToAdd": [ "+212332" ]
+  "conferenceAttendees": [ "+212332" ]
 }
