--- a/app-05-basic-conference/application.json
+++ b/app-05-basic-conference/application.json
@@ -2,8 +2,8 @@
   "title": "Basic Conference",
   "applicationName": "Basic Conference",
   "applicationTitle": "Basic Conference",
-  "applicationTable": "Basic Conference",
-  "applicationDataTable": "Basic Conference Data",
+  "applicationTable": "basic_conference",
+  "applicationDataTable": "basic_conference_data",
   "conferenceFromNumber": "+17192992848",
   "conferenceVoice": "David",
   "conferenceVoiceGender": "male",
