--- a/app-01-auto-replies/application.json
+++ b/app-01-auto-replies/application.json
@@ -1,7 +1,7 @@
 {
   "applicationName": "SMS Auto Replies",
   "applicationTitle": "SMS Auto Replies",
-  "applicationTable": "SMS Auto Replies",
+  "applicationTable": "sms_auto_replies",
   "applicationDescription": "This application will auto respond to the incoming number with the listed autoReplyText",
   "autoReplyText": "Hello, I am currently configuring my Catapult Auto Reply application, I will get back to you shortly.",
   "autoReplyNumber": "+12135147675",
