--- a/app-07-keypad-simulator/application.json
+++ b/app-07-keypad-simulator/application.json
@@ -1,8 +1,8 @@
 {
     "title": "Keypad Simulator",
     "applicationTable": "Keypad Simulator",
-    "applicationDataTable": "Keypad Simulator Data",
-    "applicationName": "Keypad Simulator",
+    "applicationDataTable": "keypad_simulator_data",
+    "applicationName": "keypad_simulator",
     "keypadSimulatorNumber": "+17192995670",
     "keypadSimulatorWrongDigit": "Sorry that was not a valid digit for this selection!",
     "keypadSimulatorVoice": "Bridget",
