--- a/app-03-voice-reminders/application.json
+++ b/app-03-voice-reminders/application.json
@@ -4,14 +4,14 @@
   "applicationTitle": "Voice Reminders",
   "applicationDataTable": "voice_reminders_data",
   "applicationDescription": "This application will set voice reminders",
-  "voiceReminderNumber": "+16204506654",
+  "voiceReminderNumber": "+NUMBER",
   "voiceReminderThanks": "Thanks, we have saved your voice reminder and date. We will remind you on this date",
   "voiceReminderSentence": "Hi. You are using Catapult Voice Reminders to enter a voice reminder please start recording your voice after the beep. Once you are done please press pound.",
   "voiceReminderVoice": "Bridget",
   "voiceReminderVoiceGender": "female",
   "voiceReminderError": "Something went wrong with the call please try again later..",
   "voiceReminderSpeechThanks": "Thank you we have saved your reminder. Please take a moment and describe your reminder ",
-  "voiceReminderBeepFile": "http://159.100.186.106/php-bandwidth-examples/app-03-voice-reminders/files/beep.wav",
+  "voiceReminderBeepFile": "URL",
   "voiceReminderTerminatingDigits": "#",
   "voiceReminderMonthError": "Error the month was invalid. Try again.",
   "voiceReminderYearError": "Error the year was invalid. Try again",
