--- a/app-06-advanced-conference/application.json
+++ b/app-06-advanced-conference/application.json
@@ -3,20 +3,22 @@
   "applicationTable": "advanced_conference",
   "applicationDataTable": "advanced_conference_data",
   "applicationName": "Advanced Conference",
-  "conferenceFromNumber": "+14086478591",
-  "conferenceInitiateNumber": "+12033508712",
+  "conferenceFromNumber": "+NUMBER",
+  "conferenceInitiateNumber": "+NUMBER",
   "conferenceInitiate": "We are initiating the conference. The attendees will have to dial the from number for entry. Afterwards they will need to enter there access code. For more instruction please read Application six documentation as it will better describe using this program. Thanks",
-  "conferenceAttendees": ["+233200", "158720219229"],
+  "conferenceAttendees": ["+NUMBER1", "+NUMBER2"],
   "conferenceNotInvited": "Sorry this conference is invite only. It appears you weren't on the list. If you feel we are in error. Please call +",
   "conferenceNoEntry": "Sorry you didn't enter the right digits",
   "conferenceDigits": "Please enter your digits",
+  "conferenceSecondAttemptDigits": "Timed out. Please enter your digits",
   "conferenceFullname": "Please enter your fullname.",
   "conferencePreJoinMessage": "Thank you for dialing in. In order to join this conference we will need your access code please enter this after the beep. When you are done please press pound",
   "conferenceJoinMessage": "Thank you for joining the conference",
   "conferenceLeaveMessage": "Goodbye",
   "conferenceGatherDigits": "#1234",
   "conferenceTerminatingDigit": "#",
-  "conferenceBeepFile": "http://159.100.186.106/projects/php-bandwidth-examples/app-06-advanced-conference/files/beep.wav",
+  "conferenceGatherMaxDigits": "4",
+  "conferenceBeepFile": "",
   "conferenceVoice": "Violeta",
   "conferenceVoiceGender": "female"
 }
