--- a/app-02-transfer-call/application.json
+++ b/app-02-transfer-call/application.json
@@ -3,8 +3,8 @@
   "applicationTitle": "Incoming Call Transfers",
   "applicationTable": "incoming_call_transfers",
   "applicationDescription": "Transfers phone calls via two listed numbers",
-  "transferNumber":"+12135162702", 
+  "transferNumber":"+NUMBER", 
   "transferSpeakSentence": "Hello we are transfering your call",
-  "listeningNumber": "+14179292090",
-  "timeout": "" 
+  "listeningNumber": "+NUMBER",
+  "timeout": "0" 
 }
