--- a/app-05-basic-conference/application.json
+++ b/app-05-basic-conference/application.json
@@ -4,10 +4,14 @@
   "applicationTitle": "Basic Conference",
   "applicationTable": "basic_conference",
   "applicationDataTable": "basic_conference_data",
-  "conferenceFromNumber": "+17192992848",
-  "conferenceVoice": "David",
+  "conferenceFromNumber": "+NUMBER",
+  "conferenceVoice": "Dave",
   "conferenceVoiceGender": "male",
+  "conferenceGreeting": "Thank you for joining this conference, we are transferring you now",
+  "conferenceNoEntry": "Sorry, you were not on the members list for this Conference, if you feel we are mistaken please contact: ",
   "conferenceInitiate": "Initiating Catapult Basic Conference. For entrance, the attendees may dial: +17192992848.",
-  "conferenceInitiateNumber": "+15877784613",
-  "conferenceAttendees": [ "+15877784613" ]
+  "conferenceEnded": "Sorry, this conference has already been finished.",
+  "conferenceError": "This conference could not be found. If your the host, and you want to start it, please make sure to call from the initiate number",
+  "conferenceInitiateNumber": "+NUMBER",
+  "conferenceAttendees": ["+NUMBER1", "+NUMBER2"]
 }
