minor updates more doc on sleep/0 usage

--- a/app-03-voice-reminders/application.json
+++ b/app-03-voice-reminders/application.json
@@ -4,14 +4,18 @@
   "applicationTitle": "Voice Reminders",
   "applicationDataTable": "voice_reminders_data",
   "applicationDescription": "This application will set voice reminders",
-  "voiceReminderNumber": "+NUMBER",
+  "voiceReminderNumber": "+13156594693",
   "voiceReminderThanks": "Thanks, we have saved your voice reminder and date. We will remind you on this date",
   "voiceReminderSentence": "Hi. You are using Catapult Voice Reminders to enter a voice reminder please start recording your voice after the beep. Once you are done please press pound.",
   "voiceReminderVoice": "Bridget",
   "voiceReminderVoiceGender": "female",
   "voiceReminderError": "Something went wrong with the call please try again later..",
   "voiceReminderSpeechThanks": "Thank you we have saved your reminder. Please take a moment and describe your reminder ",
-  "voiceReminderBeepFile": "URL",
+  "voiceReminderSpeechInitialTimeout": 12,
+  "voiceReminderSpeechPromptTimeout": 10,
+  "voiceReminderSpeechDigitTimeout": 3,
+  "voiceReminderSpeechThanksTimeout": 7,
+  "voiceReminderBeepFile": "http://php-bandwidth-examples.herokuapp.com/app-03-voice-reminders/files/beep.wav",
   "voiceReminderTerminatingDigits": "#",
   "voiceReminderMonthError": "Error the month was invalid. Try again.",
   "voiceReminderYearError": "Error the year was invalid. Try again",
