--- a/app-04-basic-voicemail/application.json
+++ b/app-04-basic-voicemail/application.json
@@ -2,15 +2,18 @@
   "applicationName": "Basic Voice Mail",
   "applicationTable": "basic_voice_mail",
   "applicationDataTable": "basic_voice_mail_data",
-  "voicemailNumber": "+NUMBER",
+  "voicemailNumber": "+18726661384",
   "voicemailSentence": "This person is busy. Please leave a message at the beep. When you are done please hit pound or hangup",
-  "voicemailFile": "beep.wav",
+  "voicemailFile": "http://php-bandwidth-examples.herokuapp.com/app-04-basic-voicemail/files/beep.wav",
   "voicemailVoice": "Bridget",
   "voicemailGender": "female",
   "voicemailInvalid": "Sorry the digit you pressed was invalid",
   "voicemailTimeout": "Sorry the call timed out",
   "voicemailThanks": "Thank you we have saved the recordintg. Goodbye",
   "voicemailIdentifier": "voice-mail", 
+  "voicemailSpeechTimeoutVoicemail": 5,
+  "voicemailSpeechTimeoutTimeoutPause": 5,
+  "voicemailSpeechTimeoutDtmf": 5,
   "voicemailTerminateDigit": "#",
   "callbackUrl": ""
 }
