--- a/app-06-advanced-conference/application.json
+++ b/app-06-advanced-conference/application.json
@@ -16,6 +16,11 @@
     "conferenceDigits": "Please enter your digits",
     "conferenceSecondAttemptDigits": "Timed out. Please enter your digits",
     "conferenceFullname": "Please enter your fullname.",
+    "conferenceWelcomeTimeout": 13,
+    "conferenceEndedTimeout": 5,
+    "conferenceJoinTimeout": 10,
+    "conferenceAudioTimeout": 5,
+    "conferenceMemberTimeout": 5,
     "conferencePreJoinMessage": "Thank you for dialing in. In order to join this conference we will need your access code please enter this after the beep. When you are done please press pound",
     "conferenceJoinMessage": "Thank you for joining the conference",
     "conferenceLeaveMessage": "Goodbye",
