--- a/app-07-keypad-simulator/application.json
+++ b/app-07-keypad-simulator/application.json
@@ -4,6 +4,9 @@
     "applicationDataTable": "keypad_simulator_data",
     "applicationName": "Keypad Simulator",
     "keypadSimulatorNumber": "+NUMBER",
+    "keypadSimulatorSpeakTimeout": 7,
+    "keypadSimulatorTransferTimeout": 5,
+    "keypadSimulatorHangupTimeout": 5,
     "keypadSimulatorWrongDigit": "Sorry that was not a valid digit for this selection!",
     "keypadSimulatorVoice": "Bridget",
     "keypadSimulatorVoiceGender": "female",
