--- a/app-08-baml-transfer/application.json
+++ b/app-08-baml-transfer/application.json
@@ -2,9 +2,9 @@
   "applicationName": "BaML Transfers",
   "applicationTable": "baml_transfers",
   "applicationDescription": "BaML call transfers this will initiate as well as generate the baML for a call",
-  "applicationId": "APPLICATION_ID",
-  "BaMLTransferListeningNumber": "+NUMBER",
-  "BaMLTransferToNumber": "+NUMBER",
+  "applicationId": "a-gjmxuxq3hgdmf6adsoxxzoy",
+  "BaMLTransferListeningNumber": "+17195694323",
+  "BaMLTransferToNumber": "+13156594693",
   "BaMLTransferVerb": "transferCall",
   "BaMLTransferSentence": "We are transferring your call, using Bandwidth Markup Language..",
   "BaMLTransferVoice": "paul",
