--- a/app-05-basic-conference/application.json
+++ b/app-05-basic-conference/application.json
@@ -12,6 +12,8 @@
     "conferenceInitiate": "Initiating Catapult Basic Conference. For entrance, the attendees may dial: +17192992848.",
     "conferenceEnded": "Sorry, this conference has already been finished.",
     "conferenceError": "This conference could not be found. If your the host, and you want to start it, please make sure to call from the initiate number",
+    "conferenceWelcomeTimeout": 10,
+    "conferenceEndTimeout":10,
     "conferenceInitiateNumber": "+NUMBER",
     "conferenceAttendees": [
         "+NUMBER1",
