--- a/app-08-baml-transfer/application.json
+++ b/app-08-baml-transfer/application.json
@@ -1,5 +1,5 @@
 {
-  "applicationName": "BaML Transfers",
+  "applicationName": "BXML Transfers",
   "applicationTable": "baml_transfers",
   "applicationDescription": "BaML call transfers this will initiate as well as generate the baML for a call",
   "applicationId": "APPLICATION_ID",
