--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "description": "Catapult PHP Examples",
     "keywords": ["bandwidth","catapult","sdk","php"],
     "homepage": "http://github.com/bandwidthcom/php-bandwidth-examples",
-    "reference": "0.7.0",
+    "reference": "v0.5.0",
     "license": "MIT",
     "authors": [
         {
