--- a/lib/php-bandwidth/composer.json
+++ b/lib/php-bandwidth/composer.json
@@ -4,7 +4,7 @@
     "description": "Bandwidth's Catapult SDK for PHP",
     "keywords": ["bandwidth","catapult","sdk","php"],
     "homepage": "http://github.com/bandwidthcom/php-bandwidth",
-    "reference": "0.7.0",
+    "reference": "v0.7.3",
     "license": "MIT",
     "authors": [
         {
@@ -14,14 +14,9 @@
         }
     ],
     "require": {
-	"ext-curl": "*",
-	"ext-json": "*",
-	"php": ">=5.3.0",
-        "bandwidth/catapult": "0.7.*"
+	"php": ">=5.3.0"
     },
     "require-dev": {
-	"ext-curl": "*",
-	"ext-json": "*",
 	"php": ">=5.3.0",
 	"phpunit/phpunit": "3.7.*"
     },
